feat(api): POST request now takes in URL instead of ip_address/hostname
