# rails-api-service/app/models/location.rb
@@ -1,6 +1,6 @@
 class Location < ActiveRecord::Base
   validates :country_code, presence: true
-  validates :ip_address, presence: true
-  
+  validates :url, presence: true
+
   serialize :raw_response, JSON
 end
